# template-project

./: README.md  README.rst  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  README.rst  pyproject.toml
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/scripts/: install_venv.bat
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
