[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"

[tool.poetry]
packages = [{include = "{{ cookiecutter.project_slug }}", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
